# synapse-platform

./: .dockerignore  .env.example  .gitignore  .pre-commit-config.yaml  CLAUDE.md  compose.prod.yml  docker-compose.dev.yml  docker-compose.yaml  synapse.pem
backend/: .dockerignore  .env.example  .gitignore  Dockerfile  alembic.ini  migration.sql  migration_clean.sql  pyproject.toml  reset_db.py  test_navigator.py  test_tool.py
backend/alembic/: env.py
backend/alembic/versions/: 001_enable_vector.py  001_initial_schema.py  002_create_scraps.py  002_create_video_vectors.py  002_move_transcript_to_video_analysis.py  002_navigator_playlist.py  003_add_weight.py  003_merge_profile_insight.py  003_user_subscription.py  003_watch_count.py  004_add_user_id.py  004_drive_folder.py  004_scrap_embeddings.py  004_user_analysis_source.py  005_analysis_stage.py  005_create_ai_chat_logs.py  005_url_user_unique.py  006_create_ai_chat_logs.py  006_extension_auth.py  006_merge_heads_merge_drive_folder_scrap_embeddings.py  007_add_user_plan.py  007_navigator_ideal_source.py  007_user_behavior_logs.py  008_drop_video_analysis_transcript.py  008_navigator_ideal_multi.py  009_analysis_interval_months.py  009_navigator_guide_cache.py  010_add_aggregator_tables.py  010_batch_source_catalog.py  010_navigator_ideal_persona_label.py  011_add_trending_keywords.py  011_navigator_ideal_values.py  011_profile_v2.py  012_add_knowledge_graphs.py  012_navigator_proposal_cache.py  012_rename_v2_portrait.py  013_ideal_targets.py  013_user_plan.py  014_playlist_status.py  015_playlist_save_status.py  (+7 more)
backend/app/: celery_app.py  main.py
backend/app/core/: README.md  config.py  constants.py  env.py  security.py
backend/app/models/: README.md  __init__.py  analysis_batch.py  analysis_source_catalog.py  b2b_trend_report.py  behavior.py  chat.py  extension_auth_code.py  global_trends_snapshot.py  knowledge_graph.py  navigator_playlist.py  navigator_proposal_cache.py  scrap.py  scrap_embedding.py  trend_domain.py  trend_keyword_embedding.py  user.py  user_analysis_source.py  user_feature_snapshot.py  user_ideal_persona.py  user_profile_history.py  user_profile_insight.py  user_subscription.py  user_token.py  user_video_watch.py  user_watch_catalog.py  video_analysis.py  video_vector.py
backend/app/repositories/: README.md  __init__.py  aggregator_repository.py  analysis_source_repository.py  archiver_repository.py  indexer_repository.py  navigator_repository.py  profiler_repository.py  reporter_repository.py  scrap_embedding_repository.py  scrap_graph_repository.py  scrap_repository.py  trend_keyword_embedding_repository.py
backend/app/schemas/: README.md  archiver.py  auth.py  behavior.py  chat.py  curator.py  navigator.py  profiler.py  report.py  reporter.py  scrap.py  scrap_graph.py  trend.py
backend/app/services/: __init__.py  aggregator_scheduler.py  analysis_source_service.py  archiver_service.py  auth_service.py  catalog_embedding_graph.py  curator_service.py  email.py  extension_auth_service.py  external_trend_service.py  external_trends.py  google_oauth.py  graph_simulator_service.py  indexer_service.py  notification.py  pdf.py  playlist_refresh_scheduler.py  scrap_embedding_service.py  scrap_graph_service.py  scrap_service.py  (+4 more)
backend/scripts/: archiver_smoke.py  archiver_test_p2.py  archiver_test_service.py  archiver_test_unit.py  auth_test_oauth_redirect.py  backfill_aggregator_from_date.py  backfill_aggregator_snapshots.py  batch_smoke.py  navigator_channel_search_test.py  navigator_guide_rag_verify.py  navigator_playlist_chat_verify.py  navigator_playlist_crud_verify.py  navigator_playlist_refresh_verify.py  navigator_playlist_regenerate_verify.py  navigator_playlist_spike.py  navigator_smoke.py  navigator_youtube_playlist_verify.py  reset_db.py  run_archiver_tests.py
(+799 files in other folders)
