[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy==2.0.50",
    "alembic==1.16.5",
    "fastapi==0.136.3",
    "langchain==1.3.4",
    "langgraph==1.2.4",
    "uvicorn>=0.49.0",
    "google-generativeai>=0.8.6",
    "google-genai>=2.8.0",
    "python-dotenv>=1.2.2",
    "sentence-transformers>=5.5.1",
    "psycopg2-binary>=2.9.12",
    "python-multipart>=0.0.32",
]

[dependency-groups]
dev = [
    "ruff==0.15.16",
    "pre-commit==4.6.0",
]

# --- Ruff lint & format ---

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
]
ignore = []

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
