[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12,<3.13"
dependencies = [
    "sqlalchemy==2.0.50",
    "alembic==1.16.5",
    "asyncpg==0.29.0",
    "pgvector>=0.3.0",
    "fastapi==0.136.3",
    "langchain==1.3.4",
    "langchain-openai>=0.3.0",
    "langgraph==1.2.4",
    "langchain-google-genai>=4.2.4",
    "uvicorn[standard]>=0.49.0",
    "google-generativeai>=0.8.6",
    "google-genai>=2.8.0",
    "python-dotenv>=1.2.2",
    "psycopg2-binary>=2.9.12",
    "python-multipart>=0.0.32",
    "feedparser>=6.0.12",
    "httpx>=0.28.1",
    "markdown>=3.10.2",
    "weasyprint>=69.0",
    "resend>=2.10.0",
    "email-validator>=2.2.0",
    "openai>=2.41.0",
    "python-jose[cryptography]>=3.5.0",
    "psycopg[binary,pool]>=3.3.4",
    "umap-learn>=0.5.7",
    "beautifulsoup4>=4.15.0",
    "lxml>=6.1.1",
    "aiohttp>=3.14.1",
    "aiofiles>=25.1.0",
]

[dependency-groups]
dev = [
    "ruff==0.15.16",
    "pre-commit==4.6.0",
]

# --- Ruff lint & format ---

[tool.ruff]
target-version = "py312"
line-length = 88

[tool.ruff.lint]
select = [
    "E", # pycodestyle errors
    "W", # pycodestyle warnings
    "F", # Pyflakes
    "I", # isort
    "B", # flake8-bugbear
]
ignore = [
    "B008",  # FastAPI Depends() in function defaults (standard pattern)
    "B905",  # zip() without strict= (not needed here)
    "E501",  # line too long (Korean strings make this impractical)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
skip-magic-trailing-comma = false
